--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,13 @@
     margin-bottom: 5px;
 }
 
-#counter_container{
-    margin-top: 50px;
-    border: 1px black solid;
+#hidden_tmp {
+  display: none;
 }
+
+[operation] {
+  width: 100%;
+  height: 100%;
+}
+
+.row {margin-bottom: 2px;}
